style.css
/*Index StyleSheet*/

#header{
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    color: rgb(75, 102, 0);
    font-size:  75px;
}
#intro{
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    color: rgb(75, 102, 0);
    font-size: 22px;
    font-weight: bolder;
    text-align: center;
}
.button{
    background-color: rgb(75, 102, 0);
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    color:rgb(250, 239, 192);
    font-weight: bold;
    font-size: 18px;  
    text-align: center;
    padding: 10px 20px;
    margin-bottom: 8px;
    border-radius: 4px; 
    border: none;
    cursor:pointer;

}
.button:hover{
    background-color:rgb(188, 212, 122)

}

*{
    background-color:rgb(250, 239, 192);
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    color: rgb(75, 102, 0);
}

.header{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    align-content: center;

}
.container{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    align-content: center;
}



/* Aloo Posto StyleSheet*/

#body{
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    color: rgb(59, 80, 2);
    font-weight: bold;
}
#header{
    text-align: center;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    color: rgb(75, 102, 0);
    font-size:  65px;
}
.image{
    text-align: center;
}
#title{
    text-align: center;
    text-decoration-line: underline;
}
.in{
    text-decoration-line: underline;
}
.read{
    text-align: center;
}
.mother{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    align-content: center;
}

/* pollo */

#polloheader{ 
    text-align: center;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    color: rgb(75, 102, 0);
    font-size:  65px;

}
#polloimg{
    text-align:center;
}
#pollo{
    text-align: center;
    text-decoration-line: underline;
    color: rgb(75, 102, 0);
}
.p{
   text-align: center; 
   color: rgb(40, 54, 1);
}
.h{
    text-align: center;
    text-decoration-line: underline;
    color: rgb(75, 102, 0);
}
.list{
    color: rgb(40, 54, 1);  
}

/* Chicken Nuggets */

.text{
    color: rgb(58, 78, 2);
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

#DINO{
    text-align: center;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size:  65px;
}
#dinoimg{
    text-align: center;
}
#recipeDino{
    text-align: center;
    text-decoration-line: underline;
}
#dinoheader{
    text-align:center;
}
.nuggets{
    text-decoration-line: underline;
}
.chicken{
    text-align: center;
    font-weight: bold;
}

